Square bracket in url workaround

--- a/mods/chatsound.toml
+++ b/mods/chatsound.toml
@@ -3,7 +3,7 @@ filename = "[1.16.5]ChatSound-1.0.3.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3393/319/[1.16.5]ChatSound-1.0.3.jar"
+url = "https://edge.forgecdn.net/files/3393/319/%5B1.16.5%5DChatSound-1.0.3.jar"
 hash-format = "murmur2"
 hash = "584050837"
 
