--- a/mods/chatsound.toml
+++ b/mods/chatsound.toml
@@ -1,5 +1,5 @@
 name = "Chat Sound"
-filename = "[1.16.5]ChatSound-1.0.3.jar"
+filename = "%5B1.16.5%5DChatSound-1.0.3.jar"
 side = "both"
 
 [download]
