--- a/mods/fancymenu.toml
+++ b/mods/fancymenu.toml
@@ -1,6 +1,7 @@
 name = "FancyMenu [Forge]"
 filename = "fancymenu_2.2.0_MC_1.16.2-1.16.5.jar"
-side = "both"
+side = "client"
+optional = true
 
 [download]
 url = "https://edge.forgecdn.net/files/3391/15/fancymenu_2.2.0_MC_1.16.2-1.16.5.jar"
