--- a/mods/worldeditcui-forge-edition-3.toml
+++ b/mods/worldeditcui-forge-edition-3.toml
@@ -1,6 +1,7 @@
 name = "WorldEditCUI Forge Edition 3"
 filename = "WorldEdit-CUI-FE3-1.16.5-3.0.9.jar"
-side = "both"
+side = "client"
+optional = true
 
 [download]
 url = "https://edge.forgecdn.net/files/3191/632/WorldEdit-CUI-FE3-1.16.5-3.0.9.jar"
