--- a/mods/better-foliage.toml
+++ b/mods/better-foliage.toml
@@ -1,6 +1,7 @@
 name = "Better Foliage"
 filename = "BetterFoliage-2.6.5-Forge-1.16.5.jar"
-side = "both"
+side = "client"
+optional = true
 
 [download]
 url = "https://edge.forgecdn.net/files/3335/91/BetterFoliage-2.6.5-Forge-1.16.5.jar"
