--- a/mods/chatsound.toml
+++ b/mods/chatsound.toml
@@ -1,6 +1,7 @@
 name = "Chat Sound"
-filename = "%5B1.16.5%5DChatSound-1.0.3.jar"
-side = "both"
+filename = "1.16.5ChatSound-1.0.3.jar"
+side = "client"
+optional = true
 
 [download]
 url = "https://edge.forgecdn.net/files/3393/319/%5B1.16.5%5DChatSound-1.0.3.jar"
