--- a/mods/ding.toml
+++ b/mods/ding.toml
@@ -1,6 +1,7 @@
 name = "Ding"
 filename = "Ding-1.16.5-1.3.0.jar"
-side = "both"
+side = "client"
+optional = true
 
 [download]
 url = "https://edge.forgecdn.net/files/3222/705/Ding-1.16.5-1.3.0.jar"
