--- a/mods/emojiful.toml
+++ b/mods/emojiful.toml
@@ -1,6 +1,7 @@
 name = "Emojiful"
 filename = "emojiful-1.16.4-2.1.4.jar"
-side = "both"
+side = "client"
+optional = true
 
 [download]
 url = "https://edge.forgecdn.net/files/3184/796/emojiful-1.16.4-2.1.4.jar"
