--- a/mods/not-enough-crashes-forge.toml
+++ b/mods/not-enough-crashes-forge.toml
@@ -1,6 +1,7 @@
 name = "Not Enough Crashes (Forge)"
 filename = "notenoughcrashes-3.2.0-forge.jar"
 side = "both"
+optional = true
 
 [download]
 url = "https://edge.forgecdn.net/files/3270/426/notenoughcrashes-3.2.0-forge.jar"
