--- a/mods/reload-audio-driver-rad.toml
+++ b/mods/reload-audio-driver-rad.toml
@@ -1,6 +1,7 @@
 name = "Reload Audio Driver (RAD) [Forge]"
 filename = "rad-1.16-4.1.1.jar"
-side = "both"
+side = "client"
+optional = true
 
 [download]
 url = "https://edge.forgecdn.net/files/3280/843/rad-1.16-4.1.1.jar"
