--- a/mods/server-tab-info.toml
+++ b/mods/server-tab-info.toml
@@ -1,6 +1,7 @@
 name = "Server Tab Info"
 filename = "ServerTabInfo-1.16.4-1.3.3.jar"
 side = "both"
+optional = true
 
 [download]
 url = "https://edge.forgecdn.net/files/3118/698/ServerTabInfo-1.16.4-1.3.3.jar"
