--- a/mods/toast-control.toml
+++ b/mods/toast-control.toml
@@ -1,6 +1,7 @@
 name = "Toast Control"
 filename = "Toast-Control-1.16.4-4.3.1.jar"
-side = "both"
+side = "client"
+optional = true
 
 [download]
 url = "https://edge.forgecdn.net/files/3172/881/Toast-Control-1.16.4-4.3.1.jar"
