--- a/mods/better-advancements.toml
+++ b/mods/better-advancements.toml
@@ -1,7 +1,11 @@
 name = "Better Advancements"
 filename = "BetterAdvancements-1.16.5-0.1.1.109.jar"
 side = "client"
+
+[option]
 optional = true
+description = "Better Advancements improves the advancement screen with a full-screen UI, easier to read description boxes, and more."
+default = true
 
 [download]
 url = "https://edge.forgecdn.net/files/3364/386/BetterAdvancements-1.16.5-0.1.1.109.jar"
