--- a/mods/better-game-menu.toml
+++ b/mods/better-game-menu.toml
@@ -1,7 +1,11 @@
 name = "Better Game Menu [Forge&Fabric]"
 filename = "BetterGameMenu-1.16.5-1.0.jar"
 side = "client"
+
+[option]
 optional = true
+description = "Replaces the game menu with a better one. Adds a mod options button, removes the 'Feed Back' and 'Report Bugs' buttons, hides unnecessary 'Open to Lan' button, and adds a 'Rejoin' button."
+default = true
 
 [download]
 url = "https://edge.forgecdn.net/files/3386/165/BetterGameMenu-1.16.5-1.0.jar"
