--- a/mods/enchantment-descriptions.toml
+++ b/mods/enchantment-descriptions.toml
@@ -1,7 +1,11 @@
 name = "Enchantment Descriptions"
 filename = "EnchantmentDescriptions-1.16.5-7.0.14.jar"
 side = "client"
+
+[option]
 optional = true
+description = "Enchantment Descriptions is a light weight client-side mod that adds descriptions of enchantments to the tool tip of enchanted books. This mod supports all vanilla enchantments in over 13 languages! Most modded enchantments are also supported."
+default = true
 
 [download]
 url = "https://edge.forgecdn.net/files/3363/585/EnchantmentDescriptions-1.16.5-7.0.14.jar"
