--- a/mods/ding.toml
+++ b/mods/ding.toml
@@ -1,7 +1,11 @@
 name = "Ding"
 filename = "Ding-1.16.5-1.3.0.jar"
 side = "client"
+
+[option]
 optional = true
+description = "Plays a 'ding' or custom sound when the game is done loading."
+default = true
 
 [download]
 url = "https://edge.forgecdn.net/files/3222/705/Ding-1.16.5-1.3.0.jar"
