--- a/mods/not-enough-crashes-forge.toml
+++ b/mods/not-enough-crashes-forge.toml
@@ -1,7 +1,11 @@
 name = "Not Enough Crashes (Forge)"
 filename = "notenoughcrashes-3.2.0-forge.jar"
 side = "both"
+
+[option]
 optional = true
+description = "Not Enough crashes is a Minecraft mod that improves crashes in Minecraft by preventing the game from closing during a crash, making it easier to examine the log when a severe error is encountered."
+default = false
 
 [download]
 url = "https://edge.forgecdn.net/files/3270/426/notenoughcrashes-3.2.0-forge.jar"
