--- a/mods/journeymap.toml
+++ b/mods/journeymap.toml
@@ -1,19 +1,19 @@
 name = "JourneyMap"
-filename = "journeymap-1.16.5-5.7.2beta20.jar"
+filename = "journeymap-1.16.5-5.7.3.jar"
 side = "both"
+
+[download]
+url = "https://edge.forgecdn.net/files/3397/59/journeymap-1.16.5-5.7.3.jar"
+hash-format = "murmur2"
+hash = "2703253920"
+
+[update]
+[update.curseforge]
+file-id = 3397059
+project-id = 32274
+release-channel = "beta"
 
 [option]
 optional = true
 description = "JourneyMap maps your Minecraft world in real-time as you explore. You can view the map in-game as a Minimap or full-screen. Supports displaying players and other creatures on the map and minimap as well."
 default = true
-
-[download]
-url = "https://edge.forgecdn.net/files/3395/279/journeymap-1.16.5-5.7.2beta20.jar"
-hash-format = "murmur2"
-hash = "2692389593"
-
-[update]
-[update.curseforge]
-file-id = 3395279
-project-id = 32274
-release-channel = "beta"
