--- a/mods/kubejs-create.toml
+++ b/mods/kubejs-create.toml
@@ -1,14 +1,14 @@
 name = "KubeJS Create"
-filename = "kubejs-create-1604.1.0.4.jar"
+filename = "kubejs-create-1605.1.2-build.3.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3169/448/kubejs-create-1604.1.0.4.jar"
+url = "https://edge.forgecdn.net/files/3398/164/kubejs-create-1605.1.2-build.3.jar"
 hash-format = "murmur2"
-hash = "457014825"
+hash = "346113281"
 
 [update]
 [update.curseforge]
-file-id = 3169448
+file-id = 3398164
 project-id = 429371
 release-channel = "beta"
