--- a/mods/security-craft.toml
+++ b/mods/security-craft.toml
@@ -1,14 +1,14 @@
 name = "Security Craft"
-filename = "SecurityCraft-1.16.5-v1.8.22.2.jar"
+filename = "[1.16.5] SecurityCraft v1.8.23.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3361/74/%5B1.16.5%5D SecurityCraft v1.8.22.2.jar"
+url = "https://edge.forgecdn.net/files/3398/327/[1.16.5] SecurityCraft v1.8.23.jar"
 hash-format = "murmur2"
-hash = "823640834"
+hash = "4286357527"
 
 [update]
 [update.curseforge]
-file-id = 3361074
+file-id = 3398327
 project-id = 64760
 release-channel = "beta"
