--- a/mods/tetra-pak.toml
+++ b/mods/tetra-pak.toml
@@ -1,14 +1,14 @@
 name = "Tetra Pak"
-filename = "tetrapak-0.2.3.jar"
+filename = "tetrapak-1.16.5-0.3.1.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3386/285/tetrapak-0.2.3.jar"
+url = "https://edge.forgecdn.net/files/3399/431/tetrapak-1.16.5-0.3.1.jar"
 hash-format = "murmur2"
-hash = "1768206739"
+hash = "2870857370"
 
 [update]
 [update.curseforge]
-file-id = 3386285
+file-id = 3399431
 project-id = 463554
 release-channel = "beta"
