Customizable Player Models update

--- a/mods/custom-player-models.toml
+++ b/mods/custom-player-models.toml
@@ -1,19 +1,18 @@
 name = "Customizable Player Models"
-filename = "CustomPlayerModels-1.16-0.0.17d.jar"
+filename = "CustomPlayerModels-1.16-0.0.17e.jar"
 side = "both"
+
+[download]
+url = "https://edge.forgecdn.net/files/3402/791/CustomPlayerModels-1.16-0.0.17e.jar"
+hash-format = "murmur2"
+hash = "1833355614"
+
+[update]
+[update.curseforge]
+file-id = 3402791
+project-id = 439870
+release-channel = "beta"
 
 [option]
 optional = true
 description = "Customize your minecraft avatar! Allows extensive player model customization using an in-game editor."
-default = false
-
-[download]
-url = "https://edge.forgecdn.net/files/3394/955/CustomPlayerModels-1.16-0.0.17d.jar"
-hash-format = "murmur2"
-hash = "1449846506"
-
-[update]
-[update.curseforge]
-file-id = 3394955
-project-id = 439870
-release-channel = "beta"
