--- a/mods/chunk-animator.toml
+++ b/mods/chunk-animator.toml
@@ -16,4 +16,4 @@ release-channel = "beta"
 [option]
 optional = true
 description = "When new chunks are loaded in vanilla minecraft they simply 'appear instantly', with this mod they can be animated to either appear from below or above. This mod shouldn't impact fps considerably because all it does is render chunks 'somewhere else'. OptiFine is supported*, however on 1.14.4 and above for the chunks to be animated you will need to make sure the 'render regions' option is disabled. This can be found under the Performance screen in Video Settings."
-default = true
+default = false
