Updated mods that are (most likely) client-side

--- a/mods/configured.toml
+++ b/mods/configured.toml
@@ -1,6 +1,6 @@
 name = "Configured"
 filename = "configured-1.1.0-1.16.5.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://edge.forgecdn.net/files/3340/535/configured-1.1.0-1.16.5.jar"
