--- a/mods/advancement-plaques.toml
+++ b/mods/advancement-plaques.toml
@@ -1,6 +1,6 @@
 name = "Advancement Plaques"
 filename = "AdvancementPlaques-1.16.5-1.2.4.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://edge.forgecdn.net/files/3396/237/AdvancementPlaques-1.16.5-1.2.4.jar"
