--- a/mods/catalogue.toml
+++ b/mods/catalogue.toml
@@ -1,6 +1,6 @@
 name = "Catalogue"
 filename = "catalogue-1.3.0-1.16.5.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://edge.forgecdn.net/files/3399/554/catalogue-1.3.0-1.16.5.jar"
