--- a/mods/its-the-little-things.toml
+++ b/mods/its-the-little-things.toml
@@ -1,6 +1,6 @@
 name = "It's the little things"
 filename = "itlt-1.16.x-2.0.0.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://edge.forgecdn.net/files/3330/41/itlt-1.16.x-2.0.0.jar"
