--- a/mods/dynamic-music.toml
+++ b/mods/dynamic-music.toml
@@ -1,6 +1,6 @@
 name = "Dynamic Music"
 filename = "dynmus-1.3.1.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://edge.forgecdn.net/files/3392/990/dynmus-1.3.1.jar"
